Added Busniess Rules Interface and a starter implementation for Accessions A bunch of fixes for ValCombobox and getting it to work better several changes to the XML files for the views

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -282,6 +282,7 @@ IndexerPane=Express Search Config
 Express_Search=Express Search
 Indexing_Descr=Indexing Collection Information
 doneIndexing=Indexing has completed.
+OptimizingIndex=Optimizing the Index...
 indexingWasCancelled=Indexing was cancelled and removed.
 CancelIndexing=Cancel Indexing
 ShowTopEntries=Show Top %s
@@ -302,7 +303,7 @@ ESCloseTable=Close
 ExpandTBL=Expand
 CollapseTBL=Collapse
 NoExpressSearchResults=No Search Results
-TermsIndexedInTime=%d terms indexed in %5.1f seconds
+TermsIndexedInTime=%d terms indexed in %d minutes %02d seconds
 
 #################################
 # Search
