--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -83,24 +83,25 @@ EmptyTrash=Empty Trash
 RetrievingData=Retrieving Data
 LoadingImage=Loading Image...
 
-# Trash Iiems
+# Trash ITems
 Restore=Restore
 DeletedItems=Deleted Items
 
 # Record Controller
-GotoFirstRecord=TTGo to First Item
-GotoPreviousRecordTT=Go to Previous Item
-GotoNextRecordTT=Go to Next Item
-GotoLastRecordTT=Go to Last Item
-RemoveRecordTT=Delete Item
-NewRecordTT=Create New Item
+Item=Item
+GotoFirstRecord=TTGo to First %s
+GotoPreviousRecordTT=Go to Previous %s
+GotoNextRecordTT=Go to Next %s
+GotoLastRecordTT=Go to Last %s
+RemoveRecordTT=Delete %s
+NewRecordTT=Create new %s
 
 #ValComboBoxFromQuery
-SearchForRecordTT=Search For Item
-EditRecordTT=Edit the Item
+SearchForRecordTT=Search for %s
+EditRecordTT=Edit the %s
 
 # FormViewObj
-SaveRecordTT=Save Item
+SaveRecordTT=Save %s
 ShowValidationInfoTT=Show Validation Information
 SwitchViewsTT=Switch Views
 ShowEditViewTT=Show Edit View
@@ -108,7 +109,7 @@ ShowSpeadsheetTT=Show Grid View
 ShowViewTT=Show View
 
 #TextFieldWithInfo
-ShowRecordInfoTT=Show Detailed Item Information
+ShowRecordInfoTT=Show detailed %s information
 
 #################################
 # Debug Terms
