--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -54,6 +54,7 @@ SystemSetup=Sys Setup
 LocalityMapper=Locality Mapper
 CollectionObject=Collection Object
 AdministrationTasks=Administration Tasks
+Attachments_Support=Attachments Support
 
 Record_Set=Record Sets
 
