--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -91,7 +91,7 @@ DeletedItems=Deleted Items
 
 # Record Controller
 Item=Item
-GotoFirstRecord=TTGo to First %s
+GotoFirstRecordTT=Go to First %s
 GotoPreviousRecordTT=Go to Previous %s
 GotoNextRecordTT=Go to Next %s
 GotoLastRecordTT=Go to Last %s
@@ -361,6 +361,7 @@ All_Loans_Report=All Loans - Report
 #################################
 AskForRSName=Enter a Record Set Name:
 ChooseRecordSet=Choose a RecordSet
+RECORDSET_MERGE_ERROR=You cannot drop %s record IDs on %s records IDs. 
 
 #################################
 # Information Request
