major update to get Grid View working. Also, fixed the (platform specific) editable combox height issue on the Mac. Add to the debug menu to enable the reloading of Forms evertime they are displayed.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -103,11 +103,12 @@ SearchForRecordTT=Search for %s
 EditRecordTT=Edit the %s
 
 # FormViewObj
+Grid=Grid
 SaveRecordTT=Save %s
 ShowValidationInfoTT=Show Validation Information
 SwitchViewsTT=Switch Views
 ShowEditViewTT=Show Edit View
-ShowSpeadsheetTT=Show Grid View
+ShowSpreadsheetTT=Show Grid View
 ShowViewTT=Show View
 
 #TextFieldWithInfo
