--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -103,11 +103,12 @@ SearchForRecordTT=Search for %s
 EditRecordTT=Edit the %s
 
 # FormViewObj
+Grid=Grid
 SaveRecordTT=Save %s
 ShowValidationInfoTT=Show Validation Information
 SwitchViewsTT=Switch Views
 ShowEditViewTT=Show Edit View
-ShowSpeadsheetTT=Show Grid View
+ShowSpreadsheetTT=Show Grid View
 ShowViewTT=Show View
 
 #TextFieldWithInfo
