--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -102,6 +102,10 @@ NewRecordTT=Create new %s
 SearchForRecordTT=Search for %s
 EditRecordTT=Edit the %s
 
+#IconTray
+EditRecord=Edit
+NewRecord=New
+
 # FormViewObj
 Grid=Grid
 SaveRecordTT=Save %s
