Lots of work to get IconTray and OrderedIconTray working. Changes are mainly in classes that aren't used anywhere if the form defs don't contain a uitype="tray" attribute anywhere.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -102,6 +102,10 @@ NewRecordTT=Create new %s
 SearchForRecordTT=Search for %s
 EditRecordTT=Edit the %s
 
+#IconTray
+EditRecord=Edit
+NewRecord=New
+
 # FormViewObj
 Grid=Grid
 SaveRecordTT=Save %s
