--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -67,6 +67,7 @@ noimage=No Image
 #################################
 # Generic Errors
 #################################
+UnhandledExceptionTitle=Unhandled Exception
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 NO_RECORD_SETS=There are no matching RecordSets.
 NO_DBDRIVERS_TITLE=No Database Driver
