--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -74,8 +74,10 @@ NO_DBDRIVERS_TITLE=No Database Driver
 NO_DBDRIVERS=There are no drivers defined in dbdrivers.xml or the file is invalid.
 LoginUserMismatch=There is no Specify User Record for your database login ID.\n The application will exit.
 LoginUserMismatchTitle=Missing Specify User
-DATA_STALE=The data in the form has been updated by someone else.\nPress OK to discard your changes and refresh with the new values.
-ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records. 
+UPDATE_DATA_STALE=The data in the form has been updated by someone else.\nPress OK to discard your changes and refresh with the new values.
+DELETE_DATA_STALE=The data in the form has been updated by someone else and was not deleted.\nPress OK to refresh the form with the new values.
+ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records.
+OBJ_NOT_DELETED=The data object was not deleted. 
 
 #################################
 # Generic Terms
