made it so it always forced an update.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -315,6 +315,7 @@ ExpandTBL=Expand
 CollapseTBL=Collapse
 NoExpressSearchResults=No Search Results
 TermsIndexedInTime=%d terms indexed in %d minutes %02d seconds
+ForceLuceneUpdate= Force Indexing of All Tables
 
 ExpressSearchTT=Express Search
 
