fixes to the reports/labels for fish

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -367,6 +367,7 @@ All_Open_Loans_Report=All Open Loans
 All_Loans_Report=All Loans
 CreateLoanFromRecordSetTT=Create Loan From Record Set
 PrintLoan=Print Loan
+LoanInvoice=Loan Invoice
 
 #################################
 # Record Sets
