--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -339,6 +339,10 @@ AgentSearchTitle=Agent Search
 # Reports
 #################################
 Create_New_Report=Create New Report
+PrintLoan=Print Loan
+CreateLoanInvoiceForNum=Do you wish to create a new invoice for loan # %s 
+CreateLoanInvoice=Create Loan Invoice
+
 
 #################################
 # Data Entry
@@ -368,6 +372,7 @@ All_Loans_Report=All Loans
 CreateLoanFromRecordSetTT=Create Loan From Record Set
 PrintLoan=Print Loan
 LoanInvoice=Loan Invoice
+CreatingLoan=Creating Loan...
 
 #################################
 # Record Sets
@@ -390,6 +395,8 @@ AskCatalogNum=Please Enter a Catalog Item
 ChooseLabel=Choose a Label
 LotsOfLabels=You have choosen to create %d labels.\nDo you wish to continue?
 LotsOfLabelsTitle=Label Creation Request
+CreateLabels=Create Labels
+
 
 #################################
 # SystemSetupTask
