--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -78,6 +78,7 @@ UPDATE_DATA_STALE=The data in the form has been updated by someone else.\nPress 
 DELETE_DATA_STALE=The data in the form has been updated by someone else and was not deleted.\nPress OK to refresh the form with the new values.
 ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records.
 OBJ_NOT_DELETED=The data object was not deleted. 
+ERROR_RECORDSET_TABLEID=The items in this recordset cannot be used for this action.
 
 #################################
 # Generic Terms
