--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -80,6 +80,9 @@ ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records.
 OBJ_NOT_DELETED=The data object was not deleted. 
 ERROR_RECORDSET_TABLEID=The items in this recordset cannot be used for this action.
 
+NO_EMAIL_PREF_INFO=There is missing or incomplete email setup information.\nPlease go to Preferences and set up your email.
+NO_EMAIL_PREF_INFO_TITLE=EMail Information Incomplete or Missing
+
 #################################
 # Generic Terms
 #################################
@@ -225,6 +228,7 @@ formatting=Formatting
 settings=Settings
 
 # Email
+email=EMail
 emailacctsettings=EMail Account Settings
 imap=IMAP
 pop3=POP3
@@ -388,6 +392,11 @@ RECORDSET_MERGE_ERROR=You cannot drop %s record IDs on %s records IDs.
 InfoRequest=Info Request
 CreateInfoRequestTT=Create Information Request
 inforequest_hint=Information Requests
+SEND_BTN=Send
+SEND_MAIL_TITLE=Send Mail
+INFO_REQUEST=Information Request
+EMAIL_SENT_ERROR=The email was not sent because of an error.
+EMAIL_SENT_OK=The email was sent.
 
 #################################
 # Labels
