--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -397,6 +397,7 @@ SEND_MAIL_TITLE=Send Mail
 INFO_REQUEST=Information Request
 EMAIL_SENT_ERROR=The email was not sent because of an error.
 EMAIL_SENT_OK=The email was sent.
+SENDING_EMAIL=Sending email message...
 
 #################################
 # Labels
