Changes for Loan and being able to set a different font for the forms

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -217,6 +217,12 @@ ChooseCatSeriesColObjDef=Choose Default Set of Forms
 SaveChanges=Do you want to save the changes?
 SaveChangesTitle=Save Changes
 
+#Pass word dialog
+PASSWORD_TITLE=Enter Password
+
+# PopUpDialogManager
+DONT_ASK_AGAIN=Don't Ask Me Again
+
 #################################
 # Prefs
 #################################
@@ -378,6 +384,7 @@ CreateLoanFromRecordSetTT=Create Loan From Record Set
 PrintLoan=Print Loan
 LoanInvoice=Loan Invoice
 CreatingLoan=Creating Loan...
+LOAN_REVIEW=Loan Review
 
 #################################
 # Record Sets
@@ -394,7 +401,7 @@ CreateInfoRequestTT=Create Information Request
 inforequest_hint=Information Requests
 SEND_BTN=Send
 SEND_MAIL_TITLE=Send Mail
-INFO_REQUEST=Information Request
+INFO_REQUEST_SUBJECT=Information Request for %s
 EMAIL_SENT_ERROR=The email was not sent because of an error.
 EMAIL_SENT_OK=The email was sent.
 SENDING_EMAIL=Sending email message...
