--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -70,8 +70,6 @@ noimage=No Image
 UnhandledExceptionTitle=Unhandled Exception
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
 NO_RECORD_SETS=There are no matching RecordSets.
-NO_DBDRIVERS_TITLE=No Database Driver
-NO_DBDRIVERS=There are no drivers defined in dbdrivers.xml or the file is invalid.
 LoginUserMismatch=There is no Specify User Record for your database login ID.\n The application will exit.
 LoginUserMismatchTitle=Missing Specify User
 UPDATE_DATA_STALE=The data in the form has been updated by someone else.\nPress OK to discard your changes and refresh with the new values.
@@ -82,6 +80,16 @@ ERROR_RECORDSET_TABLEID=The items in this recordset cannot be used for this acti
 
 NO_EMAIL_PREF_INFO=There is missing or incomplete email setup information.\nPlease go to Preferences and set up your email.
 NO_EMAIL_PREF_INFO_TITLE=EMail Information Incomplete or Missing
+
+# Database Errors
+NO_DBDRIVERS_TITLE=No Database Driver
+NO_DBDRIVERS=There are no drivers defined in dbdrivers.xml or the file is invalid.
+
+NO_DB_NAME=The Database NAme is missing.
+NO_DB_DRIVER=The Database Driver is missing.
+NO_DB_CONN_STR=The Connection String is missing.
+NO_DB_USERNAME=The Username is missing.
+NO_DB_PASSWORD=The Password is missing.
 
 #################################
 # Generic Terms
@@ -203,8 +211,7 @@ servers=Servers
 extratitle=Extra Details
 protocol=Protocol
 driver=Driver
-missingprotocol=The Protocol field should have a value (i.e. 'mysql')
-missingdriver=The Driver field should have a value (i.e. 'com.mysql.jdbc.Driver')
+MISSING_DRIVER=The Driver field should have a value (i.e. 'com.mysql.jdbc.Driver')
 
 IsAccessionDBTitle=Is Accession Database
 IsAccessionDB=Is this database for Accessions Only?
