--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -472,3 +472,36 @@ Bottom=Bottom View Only
 Both=Both Views
 TreeDefEditor=Tree Definition Editor
 TreeDefEditDialogTitle=Tree Definition Data Entry Form
+
+#################################
+# Business Rules
+#################################
+# Error Messages
+ACCESSION_IN_USE=Accession Number is already in use.
+ACCESSION_NUM_MISSING=Accession Number is missing!
+
+LOAN_AGENT_MISSING=Loan Agent is missing an Agent
+LOAN_MISSING_AGENT_ADDR=The select agent you loaning to,\nneeds to have at least one address.
+
+PERMIT_NUM_IN_USE=Permit Number %s is already in use.
+PERMIT_NUM_MISSING=Permit Number is missing!
+
+# Delete Messages
+GENERIC_OBJ_DELETED=%s was deleted.
+
+ACCESSION_DELETED=Accession %s was deleted.
+ACCESSIONAGENT_DELETED=Accession Agent %s was deleted.
+ACCESSIONAUTHORIZATION_DELETED=Accession Authorization %s was deleted.
+COLLECTIONOBJDEF_DELETED=Collection Object Definition %s was deleted.
+COLLECTIONOBJECT_DELETED=Collection Object %s was deleted.
+DATATYPE_DELETED=Data Type %s was deleted.
+DETERMINATION_STATUS_DELETED=Determination Status %s was deleted.
+GEOGRAPHY_DELETED=Geography %s was deleted.
+GEOLOGICAL_TIME_PERIOD_DELETED=Geologic Time Period %s was deleted.
+LOAN_DELETED=Loan %s was deleted.
+LOCATION_DELETED=Location %s was deleted.
+PERMIT_DELETED=Permit %s was deleted.
+PREPARATION_DELETED=Preparation %s was deleted.
+PREPTYPE_DELETED=Preparation Type %s was deleted.
+SHIPMENT_DELETED=Shipment Type %s was deleted.
+TAXON_DELETE=A taxonomic object %s was deleted.
