initial checkin for user/group management (ui). added toString to SpecifyUser

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -516,6 +516,15 @@ SHIPMENT_DELETED=Shipment Type %s was deleted.
 TAXON_DELETE=A taxonomic object %s was deleted.
 
 #################################
+# DB Admin
+#################################
+Db_Admin=Administrative
+db_admin_hint=Database Administrative Tasks
+Create_New_User=Create New User
+Create_New_Group=Create New Group
+
+
+#################################
 # Class Name to Human Readable
 #################################
 PrepType_Class=Preparation Type
