--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -447,10 +447,21 @@ Templates=Templates
 Workbenches=Workbenches
 New_Workbench=New Workbench
 New_Template=New Template
+New_TemplateFile=New Template From Data
 Field_Book_Entry=From Field Book
 Label_Entry=From Labels
 Lawrence_River=Lawrence River
 Smith_Collection=Smith Collection
+CHOOSE_WORKBENCH_IMPORT_FILE=Select a Workbench Data Import File
+WB_TEMPLATE_INFO=Workbench Template Information
+WB_WORKBENCH_INFO= Workbench Information
+WB_NO_MAPPING=No Mapping
+WB_DATFILE_COLUMNS=Data File Columns
+WB_DATAOBJECTS=Data Objects
+WB_DATAOBJ_FIELDS=Fields
+WBT_DEL_TITLE=Delete Workbench Template
+WBT_DEL_MSG=This will delete %d workbench file(s) that use this template. Proceed with the delete?
+WBT_DELBTN=Proceed
 
 #################################
 # Wizards
