--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -55,6 +55,11 @@ LocalityMapper=Locality Mapper
 CollectionObject=Collection Object
 AdministrationTasks=Administration Tasks
 Attachments_Support=Attachments Support
+Export=Export
+export_hint=Export a RecordSet to an external app or file
+Formats=Formats
+Targets=Targets
+ChooseFormat=Choose the export format
 
 Record_Set=Record Sets
 
