--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -58,7 +58,7 @@ Attachments_Support=Attachments Support
 Export=Export
 export_hint=Export a RecordSet to an external app or file
 Formats=Formats
-Targets=Targets
+Applications=Apps
 ChooseFormat=Choose the export format
 
 Record_Set=Record Sets
@@ -68,6 +68,14 @@ NoneAvail=None Available
 
 loadingimage=Loading Image
 noimage=No Image
+
+#################################
+# Exporters
+#################################
+GoogleEarth=Google Earth
+GoogleEarth_Description=Any data containing geo references can be displayed inside Google Earth.  This exporter allows you to visualize the locations from which a collection was obtained.  This can easily show the global reach of a collection's holdings.  <a href="http://earth.google.com/">Get Google Earth!</a>
+DiGIR=DiGIR
+DiGIR_Description=Collection object data can be exported to the DiGIR schema format for transfer through a DiGIR portal.  For more information on DiGIR, visit <a href="http://digir.sourceforge.net/">http://digir.sourceforge.net/</a>.
 
 #################################
 # Generic Errors
