--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -61,7 +61,7 @@ Formats=Formats
 Applications=Apps
 ChooseFormat=Choose the export format
 
-Record_Set=Record Sets
+Record_Set=Bundles
 
 Advanced=Advanced
 NoneAvail=None Available
@@ -549,11 +549,91 @@ db_admin_hint=Database Administrative Tasks
 Create_New_User=Create New User
 Create_New_Group=Create New Group
 
-
 #################################
 # Class Name to Human Readable
 #################################
 PrepType_Class=Preparation Type
+Accession=Accession
+AccessionAgent=Accession Agent
+AccessionAuthorization=Accession Authorization
+Address=Address
+Agent=Agent
+AppResource=App Resource
+AppResourceData=App Resource Data
+AppResourceDefault=App Resource Default
+AttachmentMetadata=Attachment Metadata
+Attachment=Attachment
+AttributeDef=Attribute Def
+Author=Author
+Borrow=Borrow
+BorrowAgent=Borrow Agent
+BorrowMaterial=Borrow Material
+BorrowReturnMaterial=Borrow Return Material
+CatalogSeries=Catalog Series
+CollectingEvent=Collecting Event
+CollectingEventAttr=Collecting Event Attr
+CollectingTrip=Collecting Trip
+CollectionObjDef=Collection Obj Def
+CollectionObject=Collection Object
+CollectionObjectAttr=Collection Object Attr
+CollectionObjectCitation=Collection Object Citation
+Collector=Collector
+Container=Container
+ContainerItem=Container Item
+DataType=Data Type
+Deaccession=Deaccession
+DeaccessionAgent=Deaccession Agent
+DeaccessionPreparation=Deaccession Preparation
+Determination=Determination
+DeterminationCitation=Determination Citation
+DeterminationStatus=Determination Status
+ExchangeIn=Exchange In
+ExchangeOut=Exchange Out
+Geography=Geography
+GeographyTreeDef=Geography Tree Def
+GeographyTreeDefItem=Geography Tree Def Item
+GeologicTimePeriod=Geologic Time Period
+GeologicTimePeriodTreeDef=Geologic Time Period Tree Def
+GeologicTimePeriodTreeDefItem=Geologic Time Period Tree Def Item
+GroupPerson=Group Person
+InfoRequest=Info Request
+Journal=Journal
+Loan=Loan
+LoanAgent=Loan Agent
+LoanPhysicalObject=Loan Physical Object
+LoanReturnPhysicalObject=Loan Return Physical Object
+Locality=Locality
+LocalityCitation=Locality Citation
+Location=Location
+LocationTreeDef=Location Tree Def
+LocationTreeDefItem=Location Tree Def Item
+OtherIdentifier=Other Identifier
+Permit=Permit
+PickList=Pick List
+PickListItem=Pick List Item
+Preparation=Preparation
+PreparationAttr=Preparation Attr
+PrepType=Preparation Type
+Project=Project
+ProjectCollectionObject=Project Collection Object
+RecordSet=Record Set
+RecordSetItem=Record Set Item
+ReferenceWork=Reference Work
+RepositoryAgreement=Repository Agreement
+Shipment=Shipment
+UserPermission=User Permission
+SpecifyUser=Specify User
+Stratigraphy=Stratigraphy
+Taxon=Taxon
+TaxonCitation=Taxon Citation
+TaxonTreeDef=Taxon Tree Def
+TaxonTreeDefItem=Taxon Tree Def Item
+UserGroup=User Group
+ViewSetObj=View Set Obj
+Workbench=Workbench
+WorkbenchDataItem=Workbench Data Item
+WorkbenchTemplate=Workbench Template
+WorkbenchTemplateMappingItem=Workbench Template Mapping Item
 
 # PickLists 
 SHIPMENT_METHOD=Shipment Method
