--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -56,7 +56,7 @@ CollectionObject=Collection Object
 AdministrationTasks=Administration Tasks
 Attachments_Support=Attachments Support
 Export=Export
-export_hint=Export a RecordSet to an external app or file
+export_hint=Export a Bundle to an external app or file
 Formats=Formats
 Applications=Apps
 ChooseFormat=Choose the export format
@@ -82,14 +82,14 @@ DiGIR_Description=Collection object data can be exported to the DiGIR schema for
 #################################
 UnhandledExceptionTitle=Unhandled Exception
 ERROR_CREATNG_BARCHART=An problem ocurred while creating the bar chart.
-NO_RECORD_SETS=There are no matching RecordSets.
+NO_RECORD_SETS=There are no matching Bundles.
 LoginUserMismatch=There is no Specify User Record for your database login ID.\n The application will exit.
 LoginUserMismatchTitle=Missing Specify User
 UPDATE_DATA_STALE=The data in the form has been updated by someone else.\nPress OK to discard your changes and refresh with the new values.
 DELETE_DATA_STALE=The data in the form has been updated by someone else and was not deleted.\nPress OK to refresh the form with the new values.
 ERROR_LABELS_RECORDSET_TABLEID=Labels cannot receieve this type of records.
 OBJ_NOT_DELETED=The data object was not deleted. 
-ERROR_RECORDSET_TABLEID=The items in this recordset cannot be used for this action.
+ERROR_RECORDSET_TABLEID=The items in this bundle cannot be used for this action.
 ERROR_MISSING_RS_OR_NOITEMS=The Record Set is missing or it has not items.
 
 
@@ -316,7 +316,7 @@ BuildingBarChart=Building Bar Chart...
 # Save RecordSet Dialog
 #################################
 RecordSet_Name=RecordSet Name
-SaveToRecordSet=Save To RecordSet
+SaveToRecordSet=Save To Bundle
 AddAllSelected=Add Selected
 AddAll=Add All
 
@@ -344,7 +344,7 @@ ESNoRebuild=(The Express Search does not need to be rebuilt.)
 ESBadQuery=Can't figure out your search terms, please try something else.
 ESBadQueryTitle=Incorrect Search Terms
 CreateLabelTT=Create Labels from selected records
-CreateRecordSetTT=Create RecordSet from selected records
+CreateRecordSetTT=Create Bundle from selected records
 EditRecordSetTT=Edit the selected records
 ESCloseTable=Close
 ExpandTBL=Expand
@@ -405,7 +405,7 @@ New_Exchange=New Exchange
 All_Overdue_Loans_Report=All Overdue Loans
 All_Open_Loans_Report=All Open Loans
 All_Loans_Report=All Loans
-CreateLoanFromRecordSetTT=Create Loan From Record Set
+CreateLoanFromRecordSetTT=Create Loan From Bundle
 PrintLoan=Print Loan
 LoanInvoice=Loan Invoice
 CreatingLoan=Creating Loan...
@@ -421,7 +421,7 @@ SHIPPEDTO_MISSING_ADDR=The "shipped to" agent is missing an address and cannot g
 # Record Sets
 #################################
 AskForRSName=Enter a Record Set Name:
-ChooseRecordSet=Choose a RecordSet
+ChooseRecordSet=Choose a Bundle
 RECORDSET_MERGE_ERROR=You cannot drop %s record IDs on %s records IDs. 
 
 #################################
@@ -616,8 +616,8 @@ PreparationAttr=Preparation Attr
 PrepType=Preparation Type
 Project=Project
 ProjectCollectionObject=Project Collection Object
-RecordSet=Record Set
-RecordSetItem=Record Set Item
+RecordSet=Bundle
+RecordSetItem=Bundle Item
 ReferenceWork=Reference Work
 RepositoryAgreement=Repository Agreement
 Shipment=Shipment
