--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -100,7 +100,7 @@ NO_EMAIL_PREF_INFO_TITLE=EMail Information Incomplete or Missing
 NO_DBDRIVERS_TITLE=No Database Driver
 NO_DBDRIVERS=There are no drivers defined in dbdrivers.xml or the file is invalid.
 
-NO_DB_NAME=The Database NAme is missing.
+NO_DB_NAME=The Database Name is missing.
 NO_DB_DRIVER=The Database Driver is missing.
 NO_DB_CONN_STR=The Connection String is missing.
 NO_DB_USERNAME=The Username is missing.
@@ -507,6 +507,17 @@ Bottom=Bottom View Only
 Both=Both Views
 TreeDefEditor=Tree Definition Editor
 TreeDefEditDialogTitle=Tree Definition Data Entry Form
+
+#################################
+# Tree Def Editor
+#################################
+# Name=Name # already in the list above
+Remarks=Remarks
+InFullName=In Full Name
+Enforced=Enforced
+TextBefore=Text Before
+TextAfter=Text After
+Separator=Separator Text
 
 #################################
 # Business Rules
