Added Workbench Rows and cleaned up a lot of extra sample and build files that are no longer needed.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -34,8 +34,8 @@ Accept=Accept
 # Toolbar /  Tasks
 #################################
 Startup=Welcome
-Workbench=Workbench
-workbench_hint=Create and edit Pre-Catalog Workbenches
+Workbench=OnRamp
+workbench_hint=Create and edit OnRamps
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
 Taxon_Tree=Taxonomy Tree
@@ -457,22 +457,22 @@ newpicklist=New Pick List
 # Workbench
 #################################
 Templates=Templates
-Workbenches=Workbenches
-New_Workbench=New Workbench
+Workbenches=OnRamps
+New_Workbench=New OnRamp
 New_Template=New Template
-New_TemplateFile=New Template From Data
+ImportData=Import Data
 Field_Book_Entry=From Field Book
 Label_Entry=From Labels
 Lawrence_River=Lawrence River
 Smith_Collection=Smith Collection
-CHOOSE_WORKBENCH_IMPORT_FILE=Select a Workbench Data Import File
-WB_TEMPLATE_INFO=Workbench Template Information
-WB_WORKBENCH_INFO= Workbench Information
+CHOOSE_WORKBENCH_IMPORT_FILE=Select a OnRamp Data Import File
+WB_TEMPLATE_INFO=OnRamp Template Information
+WB_WORKBENCH_INFO= OnRamp Information
 WB_NO_MAPPING=No Mapping
 WB_DATFILE_COLUMNS=Data File Columns
 WB_DATAOBJECTS=Data Objects
 WB_DATAOBJ_FIELDS=Fields
-WBT_DEL_TITLE=Delete Workbench Template
+WBT_DEL_TITLE=Delete OnRamp Template
 WBT_DEL_MSG=This will delete %d workbench file(s) that use this template. Proceed with the delete?
 WBT_DELBTN=Proceed
 
@@ -641,10 +641,10 @@ TaxonTreeDef=Taxon Tree Def
 TaxonTreeDefItem=Taxon Tree Def Item
 UserGroup=User Group
 ViewSetObj=View Set Obj
-Workbench=Workbench
-WorkbenchDataItem=Workbench Data Item
-WorkbenchTemplate=Workbench Template
-WorkbenchTemplateMappingItem=Workbench Template Mapping Item
+#Workbench=Workbench
+WorkbenchDataItem=OnRamp Data Item
+WorkbenchTemplate=OnRamp Template
+WorkbenchTemplateMappingItem=OnRamp Template Mapping Item
 
 # PickLists 
 SHIPMENT_METHOD=Shipment Method
