--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -445,7 +445,7 @@ ChooseLabel=Choose a Label
 LotsOfLabels=You have choosen to create %d labels.\nDo you wish to continue?
 LotsOfLabelsTitle=Label Creation Request
 CreateLabels=Create Labels
-
+LabelEditor=Label Editor
 
 #################################
 # SystemSetupTask
