More updates for the Workbench and Ghost DnD Ghost Dnd better support an ABSOLUTE mode for dragging

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -475,6 +475,10 @@ WB_DATAOBJ_FIELDS=Fields
 WBT_DEL_TITLE=Delete OnRamp Template
 WBT_DEL_MSG=This will delete %d workbench file(s) that use this template. Proceed with the delete?
 WBT_DELBTN=Proceed
+WB_CREATE_ROW=Add a row
+WB_INSERT_ROW=Insert a row
+WB_CLEAR_CELLS=Clear Cells
+WB_DELETE_ROW=Delete a row(s)
 
 #################################
 # Wizards
