--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -510,6 +510,7 @@ Top=Top View Only
 Bottom=Bottom View Only
 Both=Both Views
 TreeDefEditor=Tree Definition Editor
+TreeViewer=Tree Viewer
 TreeDefEditDialogTitle=Tree Definition Data Entry Form
 
 #################################
