Got the 'fullname' field updates working with the Location tree.  Still have to extend this into the other trees. Added calls to beforeSave() and afterSave() from FormViewObj.saveObject().

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -510,6 +510,7 @@ Top=Top View Only
 Bottom=Bottom View Only
 Both=Both Views
 TreeDefEditor=Tree Definition Editor
+TreeViewer=Tree Viewer
 TreeDefEditDialogTitle=Tree Definition Data Entry Form
 
 #################################
