--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -35,7 +35,7 @@ Accept=Accept
 #################################
 Startup=Welcome
 Workbench=OnRamp
-workbench_hint=Create and edit OnRamps
+workbench_hint=Create and edit an OnRamp DataSet
 Data_Entry=Data Entry
 dataentry_hint=Enter and update your collections
 Taxon_Tree=Taxonomy Tree
@@ -457,11 +457,10 @@ newpicklist=New Pick List
 # Workbench
 #################################
 Templates=Templates
-Workbenches=OnRamps
+Workbenches=DataSets
 New_Workbench=New OnRamp
 New_Template=New Template
 ImportData=Import Data
-Field_Book_Entry=From Field Book
 Label_Entry=From Labels
 Lawrence_River=Lawrence River
 Smith_Collection=Smith Collection
@@ -479,6 +478,9 @@ WB_CREATE_ROW=Add a row
 WB_INSERT_ROW=Insert a row
 WB_CLEAR_CELLS=Clear Cells
 WB_DELETE_ROW=Delete a row(s)
+WB_CHOOSE_DATASET=Choose a DataSet
+WB_SELECT_FIELD_TITLE=Select a Field
+WB_SELECT_FIELD=SChoose which field to report on:
 
 #################################
 # Wizards
