--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -481,6 +481,7 @@ WB_DELETE_ROW=Delete a row(s)
 WB_CHOOSE_DATASET=Choose a DataSet
 WB_SELECT_FIELD_TITLE=Select a Field
 WB_SELECT_FIELD=SChoose which field to report on:
+WB_SHOW_CARD=Toggle card image window
 
 #################################
 # Wizards
