--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -311,6 +311,7 @@ JasperReportReadingCachedReport=There was a problem reading the cached (compiled
 #################################
 BuildingPieChart=Building Pie Chart...
 BuildingBarChart=Building Bar Chart...
+CHART=Chart
 
 #################################
 # Save RecordSet Dialog
@@ -385,6 +386,7 @@ CreateLoanInvoice=Create Loan Invoice
 #################################
 Series_Processing=Series Processing
 CreateAndUpdate=Create/Update
+Form=Form
 
 #################################
 # Statistics
@@ -458,15 +460,13 @@ newpicklist=New Pick List
 #################################
 Templates=Templates
 Workbenches=DataSets
-New_Workbench=New OnRamp
-New_Template=New Template
-ImportData=Import Data
+WB_NEW_DATASET=New DataSet
+WB_NEW_TEMPLATE=New Template
+WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
-Lawrence_River=Lawrence River
-Smith_Collection=Smith Collection
 CHOOSE_WORKBENCH_IMPORT_FILE=Select a OnRamp Data Import File
-WB_TEMPLATE_INFO=OnRamp Template Information
-WB_WORKBENCH_INFO= OnRamp Information
+WB_TEMPLATE_INFO=DataSet Template Information
+WB_DATASET_INFO=DataSet Information
 WB_NO_MAPPING=No Mapping
 WB_DATFILE_COLUMNS=Data File Columns
 WB_DATAOBJECTS=Data Objects
@@ -474,14 +474,23 @@ WB_DATAOBJ_FIELDS=Fields
 WBT_DEL_TITLE=Delete OnRamp Template
 WBT_DEL_MSG=This will delete %d workbench file(s) that use this template. Proceed with the delete?
 WBT_DELBTN=Proceed
-WB_CREATE_ROW=Add a row
+WB_ADD_ROW=Add a row
 WB_INSERT_ROW=Insert a row
 WB_CLEAR_CELLS=Clear Cells
 WB_DELETE_ROW=Delete a row(s)
 WB_CHOOSE_DATASET=Choose a DataSet
 WB_SELECT_FIELD_TITLE=Select a Field
 WB_SELECT_FIELD=SChoose which field to report on:
+WB_CHART_TITLE=%s Counts
+WB_TOP10=Top 10
+WB_ADD_MAPPING_ITEM=Add New Grid Column
+WB_REMOVE_MAPPING_ITEM=Remove New Grid Column
+WB_CHOOSE_TEMPLATE_TITLE= Choose A Template
+WB_CHOOSE_TEMPLATE_REUSE= Choose a template to reuse
+WB_COL_MAPPER=Column Mapper
+WB_CARRYFORWARD=Carry Forward
 WB_SHOW_CARD=Toggle card image window
+
 
 #################################
 # Wizards
