added a basic help system
added help button option to ChooseFromListDlg.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -426,6 +426,12 @@ AskForRSName=Enter a Record Set Name:
 ChooseRecordSet=Choose a Bundle
 RECORDSET_MERGE_ERROR=You cannot drop %s record IDs on %s records IDs. 
 
+################################
+# Help
+################################
+HelpSystemNotLocated=The help system could not be located.
+NoHelpForContext=No help is available for this context.
+
 #################################
 # Information Request
 #################################
