--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -495,6 +495,7 @@ WB_CHOOSE_TEMPLATE_TITLE= Choose A Template
 WB_CHOOSE_TEMPLATE_REUSE= Choose a template to reuse
 WB_COL_MAPPER=Column Mapper
 WB_CARRYFORWARD=Carry Forward
+WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_CARD=Toggle card image window
 
 
@@ -664,7 +665,7 @@ TaxonTreeDef=Taxon Tree Def
 TaxonTreeDefItem=Taxon Tree Def Item
 UserGroup=User Group
 ViewSetObj=View Set Obj
-#Workbench=Workbench
+Workbench=OnRamp
 WorkbenchDataItem=OnRamp Data Item
 WorkbenchTemplate=OnRamp Template
 WorkbenchTemplateMappingItem=OnRamp Template Mapping Item
