Fixed up mapping selected columns and reading them instead of mapping all columns.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -465,7 +465,8 @@ newpicklist=New Pick List
 # Workbench
 #################################
 Templates=Templates
-Workbenches=DataSets
+WB_DATASETS=DataSets
+WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
 WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
