--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -465,7 +465,8 @@ newpicklist=New Pick List
 # Workbench
 #################################
 Templates=Templates
-Workbenches=DataSets
+WB_DATASETS=DataSets
+WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
 WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
