--- a/trunk/Specify/src/resources_en.properties
+++ b/trunk/Specify/src/resources_en.properties
@@ -498,7 +498,7 @@ WB_COL_MAPPER=Column Mapper
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_CARD=Toggle card image window
-
+WB_SHOW_MAP=Show map of selected rows
 
 #################################
 # Wizards
