Started working on "show map" capabilities.  The button is there (and all tied up) but it does nothing other than write a line to the debug log. Added an icon alias for the new button. Changed the way we work with selection sensative buttons in the WorkbenchPaneSS. Added a resource string for the new "show map" stuff.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -498,7 +498,7 @@ WB_COL_MAPPER=Column Mapper
 WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_CARD=Toggle card image window
-
+WB_SHOW_MAP=Show map of selected rows
 
 #################################
 # Wizards
