--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -499,6 +499,7 @@ WB_CARRYFORWARD=Carry Forward
 WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_CARD=Toggle card image window
 WB_SHOW_MAP=Show map of selected rows
+WB_GEO_REF_DATA_MAP=Geo Refs Data Map
 
 #################################
 # Wizards
