improved imnage browser for card images

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -191,6 +191,14 @@ ExitMenu=Exit
 ExitAccl=Q
 ExitMneu=x
 
+# CardImageFrame
+View=View
+ViewMneu=V
+CloseMneu=C
+ReducedSizeMneu=R
+OrigMneu=O
+
+# Other
 TaxonTree=Taxon Tree
 TaxonMenu=Taxon Tree
 TaxonMnemonic=R
@@ -500,6 +508,13 @@ WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_CARD=Toggle card image window
 WB_SHOW_MAP=Show map of selected rows
 WB_GEO_REF_DATA_MAP=Geo Refs Data Map
+WB_IMPORT_CARDS=Import Card Images
+WB_REUSE=Reuse
+WB_CHOOSE_IMAGES=Choose Images
+WB_CREATE_NEW_TEMPLATE=Create New Template
+WB_CREATINGMAP=Creating Map...
+WB_REDUCED_SIZE=Reduced Size
+WB_ORIG_SIZE=Original Size
 
 #################################
 # Wizards
