Got Google Earth exporter from Workbench working.  Now we're going to clean it up a bit.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -508,6 +508,7 @@ WB_CHOOSE_CARRYFORWARD=Choose Fields to Carry Forward:
 WB_SHOW_CARD=Toggle card image window
 WB_SHOW_MAP=Show map of selected rows
 WB_GEO_REF_DATA_MAP=Geo Refs Data Map
+WB_SHOW_IN_GOOGLE_EARTH=Show in Google Earth
 WB_IMPORT_CARDS=Import Card Images
 WB_REUSE=Reuse
 WB_CHOOSE_IMAGES=Choose Images
