Added custom icon capabilities to the Google Earth export code. The custom icons are specified by URLs that appear in the resources_en.properties file under WB_GOOGLE_[discipline]_ICON_URL entries. Right now the URLs point at http://www.specifysoftware.org/specify/AppResources/6/. Commented out parts of the RolloverCommand mouse listener that was clearing out JStatusBar error messages.  We hadn't set any tooltip text anyway, so this code wasn't doing what it was really designed for.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -516,6 +516,12 @@ WB_CREATE_NEW_TEMPLATE=Create New Template
 WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
+WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
+WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
+WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/EntoCircle.png
+WB_GOOGLE_PLANT_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/PlantCircle.png
+WB_GOOGLE_MAMMAL_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/MammalCircle.png
+WB_GOOGLE_HERP_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/HerpCircle.png
 
 #################################
 # Wizards
