More fixes for managing workbenches and templates

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -495,7 +495,7 @@ WB_CLEAR_CELLS=Clear Cells
 WB_DELETE_ROW=Delete a row(s)
 WB_CHOOSE_DATASET=Choose a DataSet
 WB_SELECT_FIELD_TITLE=Select a Field
-WB_SELECT_FIELD=SChoose which field to report on:
+WB_SELECT_FIELD=Choose which field to report on:
 WB_CHART_TITLE=%s Counts
 WB_TOP10=Top 10
 WB_ADD_MAPPING_ITEM=Add New Grid Column
@@ -516,12 +516,15 @@ WB_CREATE_NEW_TEMPLATE=Create New Template
 WB_CREATINGMAP=Creating Map...
 WB_REDUCED_SIZE=Reduced Size
 WB_ORIG_SIZE=Original Size
+WB_EDIT_CONTROL=Configure Edit Control
+
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
 WB_GOOGLE_BIRD_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/BirdCircle.png
 WB_GOOGLE_ENTO_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/EntoCircle.png
 WB_GOOGLE_PLANT_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/PlantCircle.png
 WB_GOOGLE_MAMMAL_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/MammalCircle.png
 WB_GOOGLE_HERP_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/HerpCircle.png
+
 
 #################################
 # Wizards
