'export data' action is available in left panel of workbench task. dropping workbenches works (no detection of whether or not dropped workbench is being edited) clicking 'export data' not working yet.

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -479,6 +479,7 @@ WB_DATASET=DataSet
 WB_NEW_DATASET=New DataSet
 WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
+WB_EXPORTDATA=Export Data
 Label_Entry=From Labels
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
 CHOOSE_WORKBENCH_EXPORT_FILE=Specify an OnRamp Data Export File
