Check in that makes sure all the command/workbench/template drag and drops all work correctly nothing can get dropped on anything and have something happen that doesn't make sense Refactored Export code in WorkbenchTask so it made a little more sense and is easier to maintain Fixed up the export configuration so we didn't have to hard code strings in WorkbenchTask Also, the Exporting wasn't adding the proper file extensions on if the user didn't type them in Added forceLoad to Workbench and WorkbenchTemplate Naxboxes not use Properties

--- a/Specify/src/resources_en.properties
+++ b/Specify/src/resources_en.properties
@@ -481,7 +481,7 @@ WB_NEW_TEMPLATE=New Template
 WB_IMPORTDATA=Import Data
 Label_Entry=From Labels
 CHOOSE_WORKBENCH_IMPORT_FILE=Select an OnRamp Data Import File
-CHOOSE_WORKBENCH_EXPORT_FILE=Specify an OnRamp Data Export File
+CHOOSE_WORKBENCH_EXPORT_FILE=Enter Export File Name
 WB_TEMPLATE_INFO=DataSet Template Information
 WB_DATASET_INFO=DataSet Information
 WB_NO_MAPPING=No Mapping
@@ -529,6 +529,7 @@ WB_CREATE_EMPTY_DATASET=Create Empty Spreadsheet from the '%s' Template
 WorkbenchDataItem=OnRamp Data Item
 WorkbenchTemplate=OnRamp Template
 WorkbenchTemplateMappingItem=OnRamp Template Mapping Item
+WB_FILE_FORMAT=File Format?
 
 # Workbench/Google Earth Exporter Icon URLs
 WB_GOOGLE_FISH_ICON_URL=http://www.specifysoftware.org/Specify/AppResources/6/images/FishCircle.png
